--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,4 +62,4 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/url-shortener:build-${{ steps.uuid.outputs.uid }}
           build-args: |
             BUILDPLATFORM=${{ runner.os }}/${{ runner.arch }}
-
+            NO_CACHE=true
