--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,8 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/url-shortener:latest
             ghcr.io/${{ github.repository_owner }}/url-shortener:build-${{ steps.uuid.outputs.uid }}
+          labels: |
+            org.opencontainers.image.description=Multi-Arch URL Shortener Image
           build-args: |
             BUILDPLATFORM=${{ runner.os }}/${{ runner.arch }}
             NO_CACHE=true
