--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,3 +67,4 @@ jobs:
           build-args: |
             BUILDPLATFORM=${{ runner.os }}/${{ runner.arch }}
             NO_CACHE=true
+          provenance: false
