--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,10 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.MY_PAT_TOKEN }}
 
+      - name: Extract repository name
+        id: repo_name
+        run: echo "REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)" >> $GITHUB_OUTPUT
+
       - name: Generate unique ID for image tag
         id: uuid
         run: echo "uid=$(date +%s%N | sha256sum | head -c 8)" >> $GITHUB_OUTPUT
@@ -61,10 +65,10 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/url-shortener:latest
-            ghcr.io/${{ github.repository_owner }}/url-shortener:build-${{ steps.uuid.outputs.uid }}
+            ghcr.io/${{ github.repository_owner }}/${{ steps.repo_name.outputs.REPO_NAME }}:latest
+            ghcr.io/${{ github.repository_owner }}/${{ steps.repo_name.outputs.REPO_NAME }}:build-${{ steps.uuid.outputs.uid }}
           labels: |
-            org.opencontainers.image.description=Multi-Arch URL Shortener Image
+            org.opencontainers.image.description=Multi-Arch ${{ steps.repo_name.outputs.REPO_NAME }} Image
           build-args: |
             BUILDPLATFORM=${{ runner.os }}/${{ runner.arch }}
             NO_CACHE=true
